--- a/source/pages/activity/activity.wxml
+++ b/source/pages/activity/activity.wxml
@@ -20,47 +20,90 @@
             <!-- <rich-text style="width: 100vw;" nodes="{{data.content}}"></rich-text> -->
         </view>
 
+        
 
-        <view class="question padding-top-40">【报名信息填写】</view>
-        <view wx:if="{{activityinfo.orderinfo.length==0}}"></view>
-        <form catchsubmit="formSubmit" id="submit">
-            <view wx:for="{{question}}" wx:key='k' wx:for-index="index">
-                <view class="question padding-top-40 padding-bottom-40">{{item.name}}</view>
-                <view wx:if="{{activityinfo.orderinfolen.length==0}}">
-                    <view class="flex-row" wx:if="{{item.isxuan == '是' && item.options.length != 0}}">
-                        <picker name="{{index}}" class="answer f-28" style="width: 100%; height: 112rpx;" range-key="name" bindchange="bindPickerChange" id="{{index}}" range="{{item.options}}" value="{{index}}">
-                            <view wx:if="{{item.value == ''}}" style="width: 100%;">请选择</view>
-                        </picker>
-                        <image src="{{uploadpath}}resource/{{res.select}}" style="width: 28rpx; height: 28rpx;"></image>
+        <view wx:if="{{activityinfo.orderinfo.length==0}}">
+            <view style="display: {{question.length == 0?'none':'block'}};" class="question padding-top-40">【报名信息填写】</view>
+            <form catchsubmit="formSubmit" id="submit">
+                <view wx:for="{{question}}" wx:key='k' wx:for-index="index">
+                    <view class="question padding-top-40 padding-bottom-40">{{item.name}}</view>
+                    <view wx:if="{{activityinfo.orderinfolen.length==0}}">
+                        <view class="flex-row" wx:if="{{item.isxuan == '是' && item.options.length != 0}}">
+                            <picker name="{{index}}" class="answer f-28" style="width: 100%; height: 112rpx;" range-key="name" bindchange="bindPickerChange" id="{{index}}" range="{{item.options}}" value="{{index}}">
+                                <view wx:if="{{item.value == ''}}" style="width: 100%;">请选择</view>
+                            </picker>
+                            <image src="{{uploadpath}}resource/{{res.select}}" style="width: 28rpx; height: 28rpx;"></image>
+                        </view>
+                        <view wx:else>
+                            <input name="{{index}}" value="{{item.value}}" placeholder="请输入" bindinput="bindKeyInput" id="{{index}}" class="answer f-28" type="text" />
+                        </view>
+                    </view>
+                    <view wx:if="{{activityinfo.orderinfolen.length > 0}}">
+                        {{activityinfo.answer[index].answer}}
+                    </view>
+
+                </view>
+
+
+
+                <view style="display: {{activityinfo.baomingjiangtai == 'C' ? 'none' : ''}};">
+                    <view>
+                        <button class="btns margin-top-60" formType="submit" style="display: {{activityinfo.baomingid == '' ? 'block' : 'none'}};">报名</button>
+
+                    </view>
+                    <view wx:if="{{timess < activityinfo.cannot}}">
+                        <button class="btns margin-top-60" bindtap="removebaoming" style="display: {{activityinfo.baomingid == '' ? 'none' : 'block'}};">取消报名</button>
                     </view>
                     <view wx:else>
-                        <input name="{{index}}" value="{{item.value}}" placeholder="请输入" bindinput="bindKeyInput" id="{{index}}" class="answer f-28" type="text" />
+                        <button disabled="true" class="btns margin-top-60" bindtap="removebaoming" style="display: {{activityinfo.baomingid == '' ? 'none' : 'block'}};">取消报名</button>
                     </view>
-                </view>
-
-                <view wx:if="{{activityinfo.orderinfolen.length > 0}}">
-                    {{activityinfo.answer[index].answer}}
-                </view>
-
-            </view>
-
-
-
-            <view style="display: {{activityinfo.baomingjiangtai == 'C' ? 'none' : ''}};">
-                <view>
-                    <button class="btns margin-top-60" formType="submit" style="display: {{activityinfo.baomingid == '' ? 'block' : 'none'}};">报名</button>
 
                 </view>
-                <view wx:if="{{timess < activityinfo.cannot}}">
-                    <button class="btns margin-top-60" bindtap="removebaoming" style="display: {{activityinfo.baomingid == '' ? 'none' : 'block'}};">取消报名</button>
-                </view>
-                <view wx:else>
-                    <button disabled="true" class="btns margin-top-60" bindtap="removebaoming" style="display: {{data.baomingid == '' ? 'none' : 'block'}};">取消报名</button>
+            </form>
+        </view>
+        <view wx:else>
+            
+            <form catchsubmit="formSubmit" id="submit">
+                <view style="display: {{question.length == 0?'none':'block'}};" class="question padding-top-40">【报名信息填写】</view>
+                <view wx:for="{{question}}" wx:key='k' wx:for-index="index">
+                    <view class="question padding-top-40 padding-bottom-40">{{item.name}}</view>
+
+
+                    <view wx:if="{{activityinfo.orderinfolen.length==0}}">
+                        <view class="flex-row" wx:if="{{item.isxuan == '是' && item.options.length != 0}}">
+                            <picker name="{{index}}" class="answer f-28" style="width: 100%; height: 112rpx;" range-key="name" bindchange="bindPickerChange" id="{{index}}" range="{{item.options}}" value="{{index}}">
+                                <view wx:if="{{item.value == ''}}" style="width: 100%;">请选择</view>
+                            </picker>
+                            <image src="{{uploadpath}}resource/{{res.select}}" style="width: 28rpx; height: 28rpx;"></image>
+                        </view>
+                        <view wx:else>
+                            <input name="{{index}}" value="{{item.value}}" placeholder="请输入" bindinput="bindKeyInput" id="{{index}}" class="answer f-28" type="text" />
+                        </view>
+                    </view>
+
+                    <view wx:if="{{activityinfo.orderinfolen.length > 0}}">
+                        {{activityinfo.answer[index].answer}}
+                    </view>
+                   
                 </view>
 
-            </view>
-        </form>
 
+
+                <view style="display: {{activityinfo.baomingjiangtai == 'C' ? 'none' : ''}};">
+                    <view>
+                        <button class="btns margin-top-60" formType="submit" style="display: {{activityinfo.baomingid == '' ? 'block' : 'none'}};">报名</button>
+                    </view>
+                    <view wx:if="{{timess < activityinfo.cannot}}">
+                        <button class="btns margin-top-60" bindtap="removebaoming" style="display: {{activityinfo.baomingid == '' ? 'none' : 'block'}};">取消报名</button>
+                    </view>
+                    <view wx:else>
+                        <button disabled="true" class="btns margin-top-60" bindtap="removebaoming" style="display: {{activityinfo.baomingid == '' ? 'none' : 'block'}};">取消报名</button>
+                    </view>
+
+                </view>
+            </form>
+        </view>
+        
 
     </view>
 </view>
