--- a/source/pages/giftcardshiyong/giftcardshiyong.wxml
+++ b/source/pages/giftcardshiyong/giftcardshiyong.wxml
@@ -1,8 +1,8 @@
-pages/giftcardbuyjilu/giftcardbuyjilu.wxml
-
-<!-- <view class="flex-row flex-column" >
+<!--pages/giftcardshiyong/giftcardshiyong.wxml-->
+<view class="flex-row flex-column" >
         <view style="margin-bottom: 92rpx; ">
-            <view class="flex-row cards"  wx:key="item" bindtap="navigateto" id="/pages/giftcardsinfo/giftcardsinfo?id={{item.id}}">
+            <view class="flex-row cards" wx:for="{{cardlist}}" wx:key="item" bindtap="chosedz"  id='{{item.id}}'
+             wx:if="{{item.isuse != 'C'  && item.yue != 0}}">
                 <image class="cardsimg" src="{{uploadpath}}giftcardinfo/{{item .cover}}"></image>
                 <view class="contentbox flex-1">
                     <view class="f-32" style="font-weight: 700;">面值￥{{item.giftcardprice_id_name}}</view>
@@ -10,11 +10,8 @@ pages/giftcardbuyjilu/giftcardbuyjilu.wxml
                         <view class="f-24">余额：{{item.yue}}</view>
                         <view class="f-24">{{item.isuse_name}}</view>
                     </view>
-                    <view class="f-20 explain">{{item.explain}}</view>
+                    <view class="f-20 explain">有效期三年</view>
                 </view>
-
             </view>
-
         </view>
-        
-    </view> -->
+    </view>
