--- a/source/pages/ordersubmit/ordersubmit.wxml
+++ b/source/pages/ordersubmit/ordersubmit.wxml
@@ -5,15 +5,13 @@
 
 <view>
     <view wx:if="{{sendtype=='A'}}">
-        <view wx:if="{{address_id==0}}" class="flex-row flex-center dizhibox" bindtap="navigateto"
-            id='/pages/addresslist/addresslist?chosetype=A&id={{address_id}}'>
+        <view wx:if="{{address_id==0}}" class="flex-row flex-center dizhibox" bindtap="navigateto" id='/pages/addresslist/addresslist?chosetype=A&id={{address_id}}'>
             <image src="{{uploadpath}}resource/{{res.dizhi}}" class="dizhi"></image>
             <view class="f-36 txt-33">点击选择地址</view>
             <view class="flex-1"></view>
             <image src="{{uploadpath}}resource/{{res.righticon}}" class="righticon"></image>
         </view>
-        <view wx:else class="flex-row flex-center dizhibox" bindtap="navigateto"
-            id='/pages/addresslist/addresslist?chosetype=A&id={{address_id}}'>
+        <view wx:else class="flex-row flex-center dizhibox" bindtap="navigateto" id='/pages/addresslist/addresslist?chosetype=A&id={{address_id}}'>
 
             <view class="flex-1 flex-row">
                 <image src="{{uploadpath}}resource/{{res.dizhi}}" class="dizhi"></image>
@@ -31,15 +29,13 @@
 
     </view>
     <view wx:else>
-        <view wx:if="{{store_id==0}}" class="flex-row flex-center dizhibox" bindtap="navigateto"
-            id='/pages/store/store?goodsid={{info.id}}&id={{store_id}}'>
+        <view wx:if="{{store_id==0}}" class="flex-row flex-center dizhibox" bindtap="navigateto" id='/pages/store/store?goodsid={{info.id}}&id={{store_id}}'>
             <image src="{{uploadpath}}resource/{{res.dizhi}}" class="dizhi"></image>
             <view class="f-36 txt-33">点击选择地址</view>
             <view class="flex-1"></view>
             <image src="{{uploadpath}}resource/{{res.righticon}}" class="righticon"></image>
         </view>
-        <view wx:else class="flex-row flex-center dizhibox" bindtap="navigateto"
-            id='/pages/store/store?goodsid={{info.id}}&id={{store_id}}'>
+        <view wx:else class="flex-row flex-center dizhibox" bindtap="navigateto" id='/pages/store/store?goodsid={{info.id}}&id={{store_id}}'>
 
             <view class="flex-1 ">
                 <view>
@@ -58,22 +54,38 @@
 
     </view>
 
+
     <view class="goods">
         <image src="{{uploadpath}}mall/{{info.cover}}" class="cover"></image>
         <view class="height-50"></view>
-        <view class="flex-row flex-center">
+        <view class="flex-row flex-center" bindtap="navigateto" id="/pages/giftcardshiyong/giftcardshiyong?goodsid={{info.id}}">
             <view class="h5 txt-33">礼品卡</view>
             <view class="flex-1"></view>
-            <view class="h5" style="color:#888888;">未使用</view>
-            <image src="{{uploadpath}}resource/{{res.righticon}}" class="righticon"></image>
+            <view wx:if="{{giftcardid > 0}}">
+                <view wx:if="{{lipin >0}}">
+                    -{{totalamount}}(余额:{{lipin}})
+                </view>
+                <view wx:else>
+                    -{{cardyue}}(余额:0)
+                </view>
+            </view>
+            <view wx:else>
+                <view class="h5" style="color:#888888;">未使用</view>
+                <image src="{{uploadpath}}resource/{{res.righticon}}" class="righticon"></image>
+            </view>
+
         </view>
         <view class="height-50"></view>
-        <view class="flex-row flex-center">
+        <view class="flex-row flex-center" bindtap="navigateto" id="/pages/conponuse/conponuse?goodsid={{info.id}}">
             <view class="h5 txt-33">优惠券</view>
             <view class="cbox" style="background-image:url({{uploadpath}}resource/{{res.couponbgicon}})">0张可用</view>
             <view class="flex-1"></view>
-            <view class="h5" style="color:#888888;">未使用</view>
-            <image src="{{uploadpath}}resource/{{res.righticon}}" class="righticon"></image>
+            <view wx:if="{{giftcardid > 0}}">-2.00</view>
+            <view wx:else>
+                <view class="h5" style="color:#888888;">未使用</view>
+                <image src="{{uploadpath}}resource/{{res.righticon}}" class="righticon"></image>
+            </view>
+            
         </view>
     </view>
     <view class="height-70"></view>
@@ -96,8 +108,7 @@
         <view class="height-70"></view>
         <view class="flex-row flex-center ">
             <view class="h5 txt-33">订单备注</view>
-            <input type="text" class="flex-1 text-right h5 txt-33" value="{{beizhu}}" bindinput="beizhuFn"
-                placeholder="请选择备注" />
+            <input type="text" class="flex-1 text-right h5 txt-33" value="{{beizhu}}" bindinput="beizhuFn" placeholder="请选择备注" />
         </view>
     </view>
 </view>
