--- a/source/pages/giftcardsinfo/giftcardsinfo.wxml
+++ b/source/pages/giftcardsinfo/giftcardsinfo.wxml
@@ -6,10 +6,11 @@
     <view class="" style="width: 700rpx;margin-top: 32rpx; margin-left: 26rpx;">
         <view class="f">卡 号：{{cardinfo.exchangecard_id_name}}</view>
         <view class="f">面 值：{{cardinfo.giftcardprice_cardprice}}元</view>
-        <view class="f">使用须知 ：
-            <template is="wxParse" data="{{wxParseData:content.nodes}}" />
-            <!-- <rich-text style="width: 100vw;" nodes="{{cardinfo.howuse}}"></rich-text> -->
-            </view>
+        <view class="f">使用须知 ：</view>
+        <view>
+            <import src="../../wxParse/wxParse.wxml" />
+            <template is="wxParse" data="{{wxParseData:howuse.nodes}}" />
+        </view>
     </view>
     <view wx:if="{{cardinfo.isuse != 'C'}}" class="flex-row" style="position: absolute; bottom: 44rpx; width: 100%;">
         <button class="but" type="primary" plain="true" open-type='share'>送给好友</button>
