--- a/source/pages/myshouyi/myshouyi.wxml
+++ b/source/pages/myshouyi/myshouyi.wxml
@@ -12,14 +12,14 @@
             <view class="flex-1 flex-row flex-column">
                 <view class="flex-row flex-center">
                     <view class="f-24 txt-33">￥</view>
-                    <view class="f-48 txt-33">0</view>
+                    <view class="f-48 txt-33">{{arrivalsoon}}</view>
                 </view>
                 <view class="f-24 txt-66">即将到账</view>
             </view>
             <view class="flex-1 flex-row flex-column">
                 <view class="flex-row flex-center">
                     <view class="f-24 txt-33">￥</view>
-                    <view class="f-48 txt-33">0</view>
+                    <view class="f-48 txt-33">{{ketixian}}</view>
                 </view>
                 <view class="f-24 txt-66">可提现</view>
             </view>
@@ -47,28 +47,18 @@
             </view>
         </view>
     </view>
+
     <view class="height-24"></view>
     <view style="width: 700rpx;background-color: #fff;">
         <view style="margin:  32rpx 32rpx 0 32rpx;">
             <view class="f-36 txt-66 txt-weight" style="line-height: 50rpx;">我的客户</view>
-            <view>
+            <view wx:for="{{fenxiaojilu}}">
                 <view class="height-40"></view>
                 <view class="flex-row">
-                    <image style="width: 94rpx; height: 94rpx; border-radius: 49rpx;border: 2px solid #E6E6E6; margin-right: 24rpx;" src=""></image>
+                    <image style="width: 94rpx; height: 94rpx; border-radius: 49rpx;border: 2px solid #E6E6E6; margin-right: 24rpx;" src="{{info.member_avatarUrl}}"></image>
                     <view>
-                        <view class="f-28 txt-33 txt-weight">昵称昵称</view>
-                        <view class="f-24 txt-66">加入时间 2022-02-23</view>
-                    </view>
-                </view>
-                <view style="border-bottom: 2px solid #E6E6E6; margin-top: 46rpx;"></view>
-            </view>
-            <view>
-                <view class="height-40"></view>
-                <view class="flex-row">
-                    <image style="width: 94rpx; height: 94rpx; border-radius: 49rpx;border: 2px solid #E6E6E6; margin-right: 24rpx;" src=""></image>
-                    <view>
-                        <view class="f-28 txt-33 txt-weight">昵称昵称</view>
-                        <view class="f-24 txt-66">加入时间 2022-02-23</view>
+                        <view class="f-28 txt-33 txt-weight">{{info.member_nickName}}</view>
+                        <view class="f-24 txt-66">加入时间 {{info.updated_date}}</view>
                     </view>
                 </view>
                 <view style="border-bottom: 2px solid #E6E6E6; margin-top: 46rpx;"></view>
