--- a/source/pages/giftcardshiyong/giftcardshiyong.wxml
+++ b/source/pages/giftcardshiyong/giftcardshiyong.wxml
@@ -5,7 +5,8 @@
              wx:if="{{item.isuse != 'C'  && item.yue != 0}}">
                 <image class="cardsimg" src="{{uploadpath}}giftcardinfo/{{item .cover}}"></image>
                 <view class="contentbox flex-1">
-                    <view class="f-32" style="font-weight: 700;">面值￥{{item.giftcardprice_id_name}}</view>
+                    <view wx:if="{{item.cardtype == 'B'}}" class="f-32" style="font-weight: 700;">面值￥{{item.giftcardprice_id}}</view>
+                    <view wx:if="{{item.cardtype == 'A'}}" class="f-32" style="font-weight: 700;">面值￥{{item.giftcardprice_id_name}}</view>
                     <view class="flex-row" style="justify-content: space-between; margin-top: 8rpx;">
                         <view class="f-24">余额：{{item.yue}}</view>
                         <view class="f-24">{{item.isuse_name}}</view>
