--- a/source/pages/giftcardbuyjilu/giftcardbuyjilu.wxml
+++ b/source/pages/giftcardbuyjilu/giftcardbuyjilu.wxml
@@ -1,20 +1,16 @@
-pages/giftcardbuyjilu/giftcardbuyjilu.wxml
+<!-- pages/giftcardbuyjilu/giftcardbuyjilu.wxml -->
 
-<!-- <view class="flex-row flex-column" >
-        <view style="margin-bottom: 92rpx; ">
-            <view class="flex-row cards"  wx:key="item" bindtap="navigateto" id="/pages/giftcardsinfo/giftcardsinfo?id={{item.id}}">
-                <image class="cardsimg" src="{{uploadpath}}giftcardinfo/{{item .cover}}"></image>
-                <view class="contentbox flex-1">
-                    <view class="f-32" style="font-weight: 700;">面值￥{{item.giftcardprice_id_name}}</view>
-                    <view class="flex-row" style="justify-content: space-between; margin-top: 8rpx;">
-                        <view class="f-24">余额：{{item.yue}}</view>
-                        <view class="f-24">{{item.isuse_name}}</view>
-                    </view>
-                    <view class="f-20 explain">{{item.explain}}</view>
-                </view>
-
+<view  class="flex-row flex-column" style="background-color: rgba(243, 246, 247, 1);  min-height: 100vh;">
+    <view wx:for="{{buygiftcardlist}}" class="flex-row flex-column" style="width: 696rpx;height: 204rpx;background: #FFFFFF;border-radius: 32rpx;margin-top: 20rpx;">
+        <view class="flex-row" style="margin: 32rpx auto 32rpx 28rpx;">
+            <image src="{{uploadpath}}giftcardinfo/{{item.cardcover_image}}" style="width: 236rpx;height: 140rpx;border-radius: 12rpx;background: #CECECE;"></image>
+            <view style="margin-left: 16rpx;">
+                <view class="v1">面值￥{{item.giftcardprice_cardprice}}</view>
+                <view class="v2">卡号：D232534643</view>
+                <view class="v2">购买时间：{{item.pay_time}}</view>
             </view>
 
         </view>
-        
-    </view> -->
+
+    </view>
+</view>
