--- a/source/pages/giftcardbuyjilu/giftcardbuyjilu.wxss
+++ b/source/pages/giftcardbuyjilu/giftcardbuyjilu.wxss
@@ -1,1 +1,16 @@
 /* pages/giftcardbuyjilu/giftcardbuyjilu.wxss */
+.v1 {
+    font-size: 32rpx;
+    font-weight: 500;
+    color: #333333;
+    line-height: 44rpx;
+    margin-bottom: 8rpx;
+}
+
+.v2 {
+    font-size: 24rpx;
+    font-weight: 400;
+    color: #999999;
+    line-height: 34rpx;
+    margin-top: 8rpx;
+}
