--- a/source/pages/giftcards/giftcards.wxml
+++ b/source/pages/giftcards/giftcards.wxml
@@ -11,7 +11,7 @@
     <view class="flex-row flex-column" style="display: {{flag == 'A' ? 'block' :'none'}}; min-height: 90vh; position: relative;">
         <view style="margin-bottom: 92rpx; ">
             <view class="flex-row cards" wx:for="{{cardlist}}" wx:key="item" bindtap="navigateto" id="/pages/giftcardsinfo/giftcardsinfo?id={{item.id}}">
-                <image class="cardsimg" src="{{uploadpath}}giftcardinfo/{{item .cover}}"></image>
+                <image class="cardsimg" src="{{uploadpath}}giftcardinfo/{{coverbanner[item.giftcardinfo_id].image}}"></image>
                 <view class="contentbox flex-1">
                     <view wx:if="{{item.cardtype == 'A'}}" class="f-32" style="font-weight: 700;">面值￥{{item.giftcardprice_id_name}}</view>
                     <view wx:if="{{item.cardtype == 'B'}}" class="f-32" style="font-weight: 700;">面值￥{{item.giftcardprice_id}}</view>
@@ -39,10 +39,10 @@
         <view class="flex-row flex-column" style=" background: rgba(255, 255, 255, 1); min-height:90vh; width: 100vw;">
             <view style="width: 645rpx;">
                 <view style="margin-bottom: 180rpx;">
-                    <input id="{{}}"  style="margin-top: 56rpx;" bindinput="bindKeyInput" class="inputbox" type="text" placeholder="请输入卡号" value="" />
+                    <input id="{{}}"  style="margin-top: 56rpx;" bindinput="bindKeyInput" class="inputbox" type="number" placeholder="请输入卡号" value="" />
                     <input id="{{}}" bindinput="bindPawInput"  class="inputbox" type="text" password placeholder="请输入卡密" value="" />
                     <view class="text">兑换须知</view>
-                    <view style="margin-bottom: 40rpx;">{{instinfo.cardxuzhi}}</view>
+                    <view style="margin-bottom: 40rpx;">instinfo</view>
                     <view class="text">使用须知</view>
                     <view>{{instinfo.cardused}}
                     </view>
