--- a/source/pages/ordersubmit/ordersubmit.wxml
+++ b/source/pages/ordersubmit/ordersubmit.wxml
@@ -36,7 +36,6 @@
             <image src="{{uploadpath}}resource/{{res.righticon}}" class="righticon"></image>
         </view>
         <view wx:else class="flex-row flex-center dizhibox" bindtap="navigateto" id='/pages/store/store?goodsid={{info.id}}&id={{store_id}}'>
-
             <view class="flex-1 ">
                 <view>
                     <view class="flex-row flex-center">
@@ -51,7 +50,18 @@
             </view>
             <image src="{{uploadpath}}resource/{{res.righticon}}" class="righticon"></image>
         </view>
-
+        <view wx:if="{{address_id==0}}" class="dizhibox flex-row flex-center" bindtap="navigateto" id="/pages/addresslist/addresslist?chosetype=B&id={{tihuoren_id}}">
+            <view class="h5 txt-33">提货人</view>
+            <view class="flex-1"></view>
+            <view class="h5" style="color: #888;">{{addressthr.name}}{{addressthr.mobile}}</view>
+            <image src="{{uploadpath}}resource/{{res.righticon}}" class="righticon"></image>
+        </view>
+        <view wx:else class="flex-row flex-center dizhibox" bindtap="navigateto" id='/pages/addresslist/addresslist?chosetype=B&id={{tihuoren_id}}'>
+                <view class="h5 txt-33">提货人</view>
+                <view class="flex-1"></view>
+            <view class="h5" style="color: #888;">{{addressthr.mobile}}{{addressthr.mobile}}</view>
+            <image src="{{uploadpath}}resource/{{res.righticon}}" class="righticon"></image>
+        </view>
     </view>
 
 
@@ -69,23 +79,23 @@
                     -{{cardyue}}(余额:0)
                 </view>
             </view>
-            <view wx:else>
+            <view wx:else class="flex-row flex-center">
                 <view class="h5" style="color:#888888;">未使用</view>
                 <image src="{{uploadpath}}resource/{{res.righticon}}" class="righticon"></image>
             </view>
 
         </view>
         <view class="height-50"></view>
-        <view class="flex-row flex-center" bindtap="navigateto" id="/pages/conponuse/conponuse?goodsid={{info.id}}">
+        <view class="flex-row flex-center" bindtap="navigateto" id="/pages/conponuse/conponuse?goodsid={{info.id}}&&totalamount={{totalamount}}">
             <view class="h5 txt-33">优惠券</view>
             <view class="cbox" style="background-image:url({{uploadpath}}resource/{{res.couponbgicon}})">{{keyongcoupon}}张可用</view>
             <view class="flex-1"></view>
             <view wx:if="{{couponid > 0}}">-{{couponprice}}</view>
-            <view wx:else>
+            <view wx:else class="flex-row flex-center">
                 <view class="h5" style="color:#888888;">未使用</view>
                 <image src="{{uploadpath}}resource/{{res.righticon}}" class="righticon"></image>
             </view>
-            
+
         </view>
     </view>
     <view class="height-70"></view>
