--- a/source/pages/shouyimingxi/shouyimingxi.wxml
+++ b/source/pages/shouyimingxi/shouyimingxi.wxml
@@ -1,37 +1,30 @@
 <!--pages/shouyimingxi/shouyimingxi.wxml-->
 <view style="margin:  32rpx 32rpx 0 32rpx;">
-            <view class="f-36 txt-66 txt-weight" style="line-height: 50rpx;">2022年02月</view>
-            <view>
-                <view class="height-40"></view>
-                <view class="flex-row" style="align-items: center;justify-content: space-between;">
-                <view class="flex-row">
-                    <image style="width: 94rpx; height: 94rpx; border-radius: 49rpx;border: 2px solid #E6E6E6; margin-right: 24rpx;" src=""></image>
-                    <view>
-                        <view class="f-28 txt-33 txt-bold">昵称昵称</view>
-                        <view class="height-18"></view>
-                        <view class="f-24 txt-66" style="line-height: 28rpx;">加入时间 2022-02-23</view>
-                    </view>
-                </view>
-                    
-                    <view class="f-32" style="color: rgba(255, 123, 5, 1);">20.00</view>
-                </view>
-                <view style="border-bottom: 2px solid #E6E6E6; margin-top: 46rpx;"></view>
-            </view>
-            <view>
-                <view class="height-40"></view>
-                <view class="flex-row" style="align-items: center;justify-content: space-between;">
-                <view class="flex-row">
-                    <image style="width: 94rpx; height: 94rpx; border-radius: 49rpx;border: 2px solid #E6E6E6; margin-right: 24rpx;" src=""></image>
-                    <view>
-                        <view class="f-28 txt-33 txt-bold">昵称昵称</view>
-                        <view class="height-18"></view>
-                        <view class="f-24 txt-66" style="line-height: 28rpx;">加入时间 2022-02-23</view>
-                    </view>
-                </view>
-                    
-                    <view class="f-32" style="color: rgba(255, 123, 5, 1);">20.00</view>
-                </view>
-                <view style="border-bottom: 2px solid #E6E6E6; margin-top: 46rpx;"></view>
-            </view>
-           
+    <picker mode="date" value="{{date}}" fields="month"  start="2017-10" end="2023-10" bindchange="bindDateChange">
+        <view class="f-36 txt-66 txt-weight" style="line-height: 50rpx;">
+            {{date}}
+            <image style="width: 24rpx; height: 14rpx;" src="{{uploadpath}}resource/{{res.zhankai}}"></image>
         </view>
+    </picker>
+
+    <view wx:for="{{fenxiaojilu}}">
+        <view class="height-40"></view>
+        <view class="flex-row" style="align-items: center;justify-content: space-between;">
+            <view class="flex-row">
+                <image style="width: 94rpx; height: 94rpx; border-radius: 49rpx;border: 2px solid #E6E6E6; margin-right: 24rpx;" src="{{item.member2_avatarUrl}}"></image>
+                <view>
+                    <view class="f-28 txt-33 txt-bold">{{item.member2_nickName}}</view>
+                    <view class="height-18"></view>
+                    <view class="f-24 txt-66" style="line-height: 28rpx;">加入时间 {{item.shijian}}</view>
+                </view>
+            </view>
+            <view>
+                <view class="f-28 txt-33">{{item.orderstatus_name}}</view>
+                <view class="height-18"></view>
+                <view class="f-24" style="color: rgba(255, 123, 5, 1);">{{item.amount}}</view>
+            </view>
+
+        </view>
+        <view style="border-bottom: 2px solid #E6E6E6; margin-top: 46rpx;"></view>
+    </view>
+</view>
