--- a/source/pages/my/my.wxml
+++ b/source/pages/my/my.wxml
@@ -62,8 +62,8 @@
         </view>
 
         <view class="flex-row flex-center ">
-            <view class="timian flex-1" bindtap="todetail">
-                <view class="">提面计划</view>
+            <view class="timian flex-1" bindtap="navigateto" id="/pages/buygiftcards/buygiftcards">
+                <view class="">礼品卡下单</view>
                 <view class="txt-66 h6">新鲜日期工厂直发</view>
                 <image src="{{uploadpath}}resource/{{res.mytimian}}" class="mytimian"></image>
             </view>
@@ -84,7 +84,7 @@
                     <image src="{{uploadpath}}resource/{{res.jifenshangcheng}}" class="icon"></image>
                     <view class="h7 txt-66 margin-top-20">积分商城</view>
                 </view>
-                <view class="flex-1 flex-row flex-column">
+                <view class="flex-1 flex-row flex-column" bindtap="notdata">
                     <image src="{{uploadpath}}resource/{{res.kefubangzhu}}" class="icon"></image>
                     <view class="h7 txt-66 margin-top-20">客服帮助</view>
                 </view>
