--- a/source/pages/activity/activity.wxml
+++ b/source/pages/activity/activity.wxml
@@ -14,10 +14,10 @@
         <view wx:if="{{activityinfo.price > 0}}" class="f-28 margin-top-16">报名费用：{{activityinfo.price}}</view>
         <view wx:else class="f-28 margin-top-16">报名费用：免费</view>
         <view class="question padding-top-40">【活动内容】</view>
-        <view class="padding-top-16">
-            <import src="../../wxParse/wxParse.wxml" />
-            <template is="wxParse" data="{{wxParseData:content.nodes}}" />
-            <!-- <rich-text style="width: 100vw;" nodes="{{data.content}}"></rich-text> -->
+        <view class="padding-top-16" >
+            <!-- <import src="../../wxParse/wxParse.wxml" />
+            <template is="wxParse" data="{{wxParseData:content.nodes}}" /> -->
+            <rich-text  space="nbsp"  nodes="{{activityinfo.content}}"></rich-text>
         </view>
 
         
@@ -46,7 +46,7 @@
 
 
 
-                <view style="display: {{activityinfo.baomingjiangtai == 'C' ? 'none' : ''}};">
+                <view style="display: {{activityinfo.baomingjiangtai == 'B' ? '' : 'none'}};">
                     <view>
                         <button class="btns margin-top-60" formType="submit" style="display: {{activityinfo.baomingid == '' ? 'block' : 'none'}};">报名</button>
 
@@ -61,8 +61,7 @@
                 </view>
             </form>
         </view>
-        <view wx:else>
-            
+        <view wx:else>  
             <form catchsubmit="formSubmit" id="submit">
                 <view style="display: {{question.length == 0?'none':'block'}};" class="question padding-top-40">【报名信息填写】</view>
                 <view wx:for="{{question}}" wx:key='k' wx:for-index="index">
@@ -86,10 +85,7 @@
                     </view>
                    
                 </view>
-
-
-
-                <view style="display: {{activityinfo.baomingjiangtai == 'C' ? 'none' : ''}};">
+                <view style="display: {{activityinfo.baomingjiangtai == 'B' ? '' : 'none'}};">
                     <view>
                         <button class="btns margin-top-60" formType="submit" style="display: {{activityinfo.baomingid == '' ? 'block' : 'none'}};">报名</button>
                     </view>
