--- a/source/pages/giftcardbuyjilu/giftcardbuyjilu.wxml
+++ b/source/pages/giftcardbuyjilu/giftcardbuyjilu.wxml
@@ -6,7 +6,7 @@
             <image src="{{uploadpath}}giftcardinfo/{{item.cardcover_image}}" style="width: 236rpx;height: 140rpx;border-radius: 12rpx;background: #CECECE;"></image>
             <view style="margin-left: 16rpx;">
                 <view class="v1">面值￥{{item.giftcardprice_cardprice}}</view>
-                <view class="v2">卡号：D232534643</view>
+                <view class="v2">卡号：{{item.cardnum}}</view>
                 <view class="v2">购买时间：{{item.pay_time}}</view>
             </view>
 
