--- a/source/pages/giftcardshousongjilu/giftcardshousongjilu.wxml
+++ b/source/pages/giftcardshousongjilu/giftcardshousongjilu.wxml
@@ -21,13 +21,20 @@
                 <view class="haoyou">来自好友：好友姓名</view>
             </view>
         </view>
-
     </view>
 
     <view style="display: {{flag == 'B' ? 'block' :'none'}};">
         <view wx:for="{{mygiftcardzengsong}}" style="width: 700rpx;height: 280rpx;background: #FFFFFF;border-radius: 32rpx;margin-top: 20rpx;">
             <view style=" margin: 32rpx;">
-            <view class="flex-row flex-center" style="border-bottom: 2rpx solid rgba(204, 204, 204, 1); padding-bottom: 32rpx;">
+            <view wx:if="{{item.cardtype=='A'}}" class="flex-row flex-center" style="border-bottom: 2rpx solid rgba(204, 204, 204, 1); padding-bottom: 32rpx;">
+                <image src=" {{uploadpath}}giftcardinfo/{{item.cardcover_image}}" style="width: 236rpx;height: 140rpx;border-radius: 12rpx;background: #CECECE;"></image>
+                <view style="margin-left: 16rpx;">
+                    <view class="v1">面值￥{{item.giftcardprice_id_name}}</view>
+                    <view class="v2">赠送时间：{{item.buynum}}</view>
+                    <view class="v2">收到时间：{{item.receivetime}}</view>
+                </view>
+            </view>
+            <view wx:if="{{item.cardtype=='B'}}" class="flex-row flex-center" style="border-bottom: 2rpx solid rgba(204, 204, 204, 1); padding-bottom: 32rpx;">
                 <image src=" {{uploadpath}}giftcardinfo/{{item.cover}}" style="width: 236rpx;height: 140rpx;border-radius: 12rpx;background: #CECECE;"></image>
                 <view style="margin-left: 16rpx;">
                     <view class="v1">面值￥{{item.giftcardprice_cardprice}}</view>
@@ -35,10 +42,9 @@
                     <view class="v2">购买时间：</view>
                 </view>
             </view>
-            <view class="haoyou">来自好友：好友姓名</view>
+            <view class="haoyou">赠送好友：好友姓名</view>
         </view>
         </view>
-    
     </view>
 
 </view>
