--- a/source/pages/giftcardshousongjilu/giftcardshousongjilu.wxss
+++ b/source/pages/giftcardshousongjilu/giftcardshousongjilu.wxss
@@ -7,6 +7,10 @@
     width: 46rpx;
     height: 4rpx;
 }
+.titlebox {
+    line-height: 32rpx;
+    margin: 32rpx 0 16rpx 0;
+}
 .line_color{
     background-color: rgba(68, 181, 73, 1);
 }
@@ -16,4 +20,19 @@ font-weight: 400;
 color: #999999;
 line-height: 34rpx;
 margin-top: 24rpx;
+}
+.v1 {
+    font-size: 32rpx;
+    font-weight: 500;
+    color: #333333;
+    line-height: 44rpx;
+    margin-bottom: 8rpx;
+}
+
+.v2 {
+    font-size: 24rpx;
+    font-weight: 400;
+    color: #999999;
+    line-height: 34rpx;
+    margin-top: 8rpx;
 }
