--- a/source/pages/giftcardsinfo/giftcardsinfo.wxml
+++ b/source/pages/giftcardsinfo/giftcardsinfo.wxml
@@ -1,21 +1,30 @@
 <!--pages/giftcardsinfo/giftcardsinfo.wxml-->
 <view style="background-color: rgba(243, 246, 247, 1); min-height: 100vh; position: relative;">
     <view class="flex-row flex-column" style="margin-top: 40rpx;">
-        <image class="img" src="{{uploadpath}}giftcardinfo/{{cardinfo.cover}}"></image>
+        <image wx:if="{{cardinfo.cardtype=='A'}}" class="img" src="{{uploadpath}}giftcardinfo/{{cardinfo.cardcover_image}}"></image>
+        <image wx:if="{{cardinfo.cardtype=='B'}}" class="img" src="{{uploadpath}}giftcardinfo/{{cardinfo.cover}}"></image>
     </view>
-    <view class="" style="width: 700rpx;margin-top: 32rpx; margin-left: 26rpx;">
-        <view wx:if="{{cardinfo.cardtype=='A'}}" class="f">卡 号：{{cardinfo.buynum}}</view>
-        <view wx:if="{{cardinfo.cardtype=='B'}}" class="f">卡 号：{{cardinfo.exchangecard_id_name}}</view>
-        <view wx:if="{{cardinfo.cardtype=='A'}}" class="f">面 值：{{cardinfo.giftcardprice_cardprice}}元</view>
-        <view wx:if="{{cardinfo.cardtype=='B'}}" class="f">面 值：{{cardinfo.giftcardprice_id}}元</view>
+    <view wx:if="{{cardinfo.cardtype=='A'}}" class="" style="width: 700rpx;margin-top: 32rpx; margin-left: 26rpx;">
+        <view class="f">卡 号：{{cardinfo.buynum}}</view>
+        <view class="f">面 值：{{cardinfo.giftcardprice_cardprice}}元</view>
         <view class="f">使用须知 ：</view>
         <view>
             <import src="../../wxParse/wxParse.wxml" />
             <template is="wxParse" data="{{wxParseData:howuse.nodes}}" />
         </view>
     </view>
-    <view wx:if="{{cardinfo.isuse != 'C'}}" class="flex-row" style="position: absolute; bottom: 44rpx; width: 100%;">
-        <button class="but" type="primary" plain="true" open-type='share'>送给好友</button>
-        <button class="but" type="primarys" bindtap="gotoTabbar">立即使用</button>
+
+    <view wx:if="{{cardinfo.cardtype=='B'}}" class="" style="width: 700rpx;margin-top: 32rpx; margin-left: 26rpx;">
+        <view  class="f">卡 号：{{cardinfo.exchangecard_id_name}}</view>
+        <view  class="f">面 值：{{cardinfo.shiwukaprice}}元</view>
+        <view class="f">使用须知 ：</view>
+        <view>
+            <import src="../../wxParse/wxParse.wxml" />
+            <template is="wxParse" data="{{wxParseData:howuse.nodes}}" />
+        </view>
+    </view>
+    <view  class="flex-row" style="position: absolute; bottom: 44rpx; width: 100%;">
+        <button wx:if="{{cardinfo.isuse == 'A'}}"  class="but" type="primary" plain="true" open-type='share'>送给好友</button>
+        <button wx:if="{{!(cardinfo.isuse=='C'||cardinfo.isuse=='D')}}" class="but" type="primarys" bindtap="gotoTabbar">立即使用</button>
     </view>
 </view>
