--- a/source/pages/home/home.wxml
+++ b/source/pages/home/home.wxml
@@ -33,7 +33,7 @@
 </view>
 
 <view>
-  <view class="listbox" wx:for="{{list}}" wx:key='k'>
+  <view class="listbox" wx:for="{{list}}" wx:key='k' bindtap="navigateto" id='/pages/malldetail/malldetail?id={{item.id}}'>
     <view class="flex-row flex-center">
       <image src="{{uploadpath}}mall/{{item.cover}}" class="goodsimg"></image>
       <view class="flex-1 margin-left-20">
@@ -42,7 +42,7 @@
         <view class="flex-row flex-center">
           <view class="h6" style="color: #CCCCCC;text-decoration: line-through;">￥{{item.old_price}}</view>
           <view class="flex-1"></view>
-          <view class="btns" bindtap="navigateto" id='/pages/malldetail/malldetail?id={{item.id}}'>立即购买</view>
+          <view class="btns" >立即购买</view>
         </view>
       </view>
     </view>
