--- a/source/pages/malldetail/malldetail.wxml
+++ b/source/pages/malldetail/malldetail.wxml
@@ -1,5 +1,4 @@
-<view class="flex-row flex-center fixedtop"
-    style="top:{{globalData.Custom.top}}px;height:{{globalData.Custom.height}}px;">
+<view class="flex-row flex-center fixedtop" style="top:{{globalData.Custom.top}}px;height:{{globalData.Custom.height}}px;">
     <image src="{{uploadpath}}resource/{{res.backicon}}" bindtap="backPage" class="backicon"></image>
     <view class="flex-1"></view>
     <view class="f-34 margin-right-68">商品详情</view>
@@ -26,11 +25,25 @@
         <view class="h6" style="color:#A1A3A6;">￥{{info.old_price}}</view>
     </view>
     <view class="height-50"></view>
-    <view class="flex-row flex-center">
+    <view class="flex-row">
+        <view wx:if="{{info.yunfei!=0}}" >邮费￥{{info.yunfei}}</view>
+        <view wx:else class="fivebox">包邮</view>
+        <view class="flex-1"></view>
+        <view class="fivebox">销量{{info.sales}}</view>
+        <view class="flex-1"></view>
+        <view class="fivebox">库存{{info.inventory}}</view>
+    </view>
+    <!-- <view class="flex-row flex-center">
         <view class="f-26" style="color:#3A3A3A;">优惠券</view>
         <view class="flex-1"></view>
         <view class="f-22 txt-99">暂无可选优惠券</view>
         <image src="{{uploadpath}}resource/{{res.righticon}}" class="righticon"></image>
+    </view> -->
+    <view class="height-50"></view>
+    <view class="flex-row">
+    <view class="f-26" style="color:#3A3A3A;">规格</view>
+    <view class="flex-1"></view>
+    <view class="f-22 txt-99">{{info.specification}}</view>
     </view>
     <view class="height-50"></view>
     <view class="flex-row flex-center">
@@ -42,8 +55,7 @@
     <view class="height-50"></view>
     <view class="f-26 margin-bottom-26" style="color:#3A3A3A;">视频</view>
     <view class="flex-row flex-column">
-        <video src="{{uploadpath}}mall/{{info.video}}" play-btn-position="center" controls="true"
-            show-center-play-btn="true" class="videos"></video>
+        <video src="{{uploadpath}}mall/{{info.video}}" play-btn-position="center" controls="true" show-center-play-btn="true" class="videos"></video>
     </view>
 
 
@@ -56,15 +68,15 @@
 
 <view class="height-100"></view>
 <view class="flex-row flex-center fixbottom">
-<view class="flex-row flex-column margin-left-26" bindtap="backHome">
-    <image src="{{uploadpath}}resource/{{res.homeicon}}" class="homeicon"></image>
-    <view class="h7 txt-66">首页</view>
-</view>
-<view class="w70"></view>
-<view class="flex-row flex-column" bindtap="phoneCall" id="{{instinfo.customerservicemobile}}">
-    <image src="{{uploadpath}}resource/{{res.kefuicon}}" class="kefuicon"></image>
-    <view class="h7 txt-66">客服</view>
-</view>
-<view class="flex-1"></view>
-<view class="btns" bindtap="navigateto" id="/pages/ordersubmit/ordersubmit?goodsid={{info.id}}">立即购买</view>
+    <view class="flex-row flex-column margin-left-26" bindtap="backHome">
+        <image src="{{uploadpath}}resource/{{res.homeicon}}" class="homeicon"></image>
+        <view class="h7 txt-66">首页</view>
+    </view>
+    <view class="w70"></view>
+    <view class="flex-row flex-column" bindtap="phoneCall" id="{{instinfo.customerservicemobile}}">
+        <image src="{{uploadpath}}resource/{{res.kefuicon}}" class="kefuicon"></image>
+        <view class="h7 txt-66">客服</view>
+    </view>
+    <view class="flex-1"></view>
+    <view class="btns" bindtap="navigateto" id="/pages/ordersubmit/ordersubmit?goodsid={{info.id}}">立即购买</view>
 </view>
