--- a/source/pages/malldetail/malldetail.wxss
+++ b/source/pages/malldetail/malldetail.wxss
@@ -6,14 +6,17 @@
     left: 0;
     z-index: 10;
 }
+
 .backicon {
     width: 34rpx;
     height: 34rpx;
     margin-left: 34rpx;
 }
+
 .margin-right-68 {
     margin-right: 68rpx;
 }
+
 .imgs {
     width: 100vw;
     height: 1000rpx;
@@ -26,19 +29,23 @@
 .margin-top-28 {
     margin-top: 28rpx;
 }
+
 .margin-top-24 {
     margin-top: 24rpx;
 }
+
 .righticon {
     width: 26rpx;
     height: 26rpx;
     margin-left: 20rpx;
 }
+
 .videos {
     width: 686rpx;
     height: 386rpx;
     border-radius: 30rpx;
 }
+
 .margin-bottom-26 {
     margin-bottom: 26rpx;
 }
@@ -51,8 +58,9 @@
     width: 100vw;
     height: 100%;
 }
+
 .fixbottom {
-    width:100vw;
+    width: 100vw;
     background: #ffffff;
     position: fixed;
     bottom: 0;
@@ -60,23 +68,28 @@
     z-index: 10;
     padding: 16rpx 0 8rpx;
 }
+
 .margin-left-26 {
     margin-left: 26rpx;
 }
+
 .homeicon {
     width: 38rpx;
     height: 35rpx;
     margin-bottom: 8rpx;
-   
+
 }
+
 .w70 {
     width: 70rpx;
 }
+
 .kefuicon {
     width: 36rpx;
     height: 38rpx;
     margin-bottom: 8rpx;
 }
+
 .btns {
     width: 194rpx;
     height: 62rpx;
@@ -87,4 +100,11 @@
     line-height: 62rpx;
     text-align: center;
     margin-right: 30rpx;
+}
+
+.fivebox {
+    font-size: 24rpx;
+    font-weight: 400;
+    color: #999999;
+    line-height: 34rpx;
 }
