--- a/source/pages/orderdetail/orderdetail.wxml
+++ b/source/pages/orderdetail/orderdetail.wxml
@@ -1,25 +1,25 @@
 <view class="margin26">
-    <view class="txt-33 f-36">{{info.orderstatus_name}}</view>
+    <view wx:if="{{(info.sendtype=='B'&&info.orderstatus=='B')}}" class="txt-33 f-36">待取货</view>
+    <view wx:else class="txt-33 f-36">{{info.orderstatus_name}}</view>
 </view>
 <view>
     <view wx:if="{{info.sendtype=='A'}}">
-     
-        <view class="flex-row flex-center dizhibox" wx:if='{{info.orderstatus=="A"}}' bindtap="navigateto"
-            id='/pages/addresslist/addresslist?chosetype=A&id={{address_id}}'>
+
+        <view class="flex-row flex-center dizhibox" wx:if='{{info.orderstatus=="A"}}' bindtap="navigateto" id='/pages/addresslist/addresslist?chosetype=A&id={{address_id}}'>
 
             <view class="flex-1 flex-row">
                 <image src="{{uploadpath}}resource/{{res.dizhi}}" class="dizhi"></image>
                 <view>
-                   
+
 
                     <view class="flex-row flex-center">
-                        <view class="txt-33 h7">{{info.address_name}}</view>
-                        <view class="txt-33 h7 margin-left-20">{{info.address_mobile}}</view>
+                        <view class="txt-33 h5">{{info.address_name}}</view>
+                        <view class="txt-33 h5 margin-left-20">{{info.address_mobile}}</view>
                     </view>
-                    <view class="h7 txt-88 margin-top-24" >{{info.address_address}}</view>
+                    <view class="f-36 txt-99" style="font-weight: 500;">{{info.address_address}}</view>
                 </view>
             </view>
-            <view class="h7 txt-33" wx:if="{{info.orderstatus=='A'}}">修改</view>
+            <view class="h5 txt-33" wx:if="{{info.orderstatus=='A'}}">修改</view>
             <image src="{{uploadpath}}resource/{{res.righticon}}" class="righticon"></image>
         </view>
         <view class="flex-row flex-center dizhibox" wx:else>
@@ -27,13 +27,11 @@
             <view class="flex-1 flex-row">
                 <image src="{{uploadpath}}resource/{{res.dizhi}}" class="dizhi"></image>
                 <view>
-                   
-
                     <view class="flex-row flex-center">
-                        <view class="txt-33 h7">{{info.address_name}}</view>
-                        <view class="txt-33 h7 margin-left-20">{{info.address_mobile}}</view>
+                        <view class="txt-33 h5">{{info.address_name}}</view>
+                        <view class="txt-33 h5 margin-left-20">{{info.address_mobile}}</view>
                     </view>
-                    <view class="h7 txt-88 margin-top-24" >{{info.address_address}}</view>
+                    <view class="f-36 txt-99" style="font-weight: 500;">{{info.address_address}}</view>
                 </view>
             </view>
             <!-- <view class="h7 txt-33" wx:if="{{info.orderstatus=='A'}}">修改</view>
@@ -42,9 +40,8 @@
 
     </view>
     <view wx:else>
-       
-        <view class="flex-row flex-center dizhibox" wx:if="{{info.orderstatus=='A'}}" bindtap="navigateto"
-            id='/pages/store/store?goodsid={{info.goods_id}}&id={{store_id}}'>
+
+        <view class="flex-row flex-center dizhibox" wx:if="{{info.orderstatus=='A'}}" bindtap="navigateto" id='/pages/store/store?goodsid={{info.goods_id}}&id={{store_id}}'>
 
             <view class="flex-1 ">
                 <view>
@@ -60,7 +57,7 @@
             </view>
             <image src="{{uploadpath}}resource/{{res.righticon}}" class="righticon"></image>
         </view>
-        <view class="flex-row flex-center dizhibox" wx:else >
+        <view class="flex-row flex-center dizhibox" wx:else>
 
             <view class="flex-1 ">
                 <view>
@@ -79,20 +76,27 @@
     </view>
 
     <view class="goods">
-        <image src="{{uploadpath}}mall/{{info.goods_cover}}" class="cover"></image>
+        <image src="{{uploadpath}}mall/{{info.goods_cover}}" class="cover" bindtap="navigateto" id="/pages/malldetail/malldetail?id={{info.goods_id}}"></image>
         <view class="height-50"></view>
         <view class="flex-row flex-center">
             <view class="h5 txt-33">礼品卡</view>
             <view class="flex-1"></view>
-            <view class="h5" style="color:#44B549;">-¥0.00</view>
+            <view wx:if="{{info.mygiftcard_id<=0}}"  class="flex-row flex-center">
+                <view class="h5" style="color:#888888;">未使用</view>
+                <!-- <image src="{{uploadpath}}resource/{{res.righticon}}" class="righticon"></image> -->
+            </view>
+            <view wx:else class="h5" style="color:#44B549;">-¥{{info.lipin}}</view>
         </view>
         <view class="height-50"></view>
-        <view class="flex-row flex-center">
+        <view  class="flex-row flex-center">
             <view class="h5 txt-33">优惠券</view>
-            <view class="cbox" style="background-image:url({{uploadpath}}resource/{{res.couponbgicon}})">0张可用</view>
+            <!-- <view class="cbox" style="background-image:url({{uploadpath}}resource/{{res.couponbgicon}})">0张可用</view> -->
             <view class="flex-1"></view>
-            <view class="h5" style="color:#888888;">未使用</view>
-            <image src="{{uploadpath}}resource/{{res.righticon}}" class="righticon"></image>
+            <view wx:if="{{info.mycoupons_id<=0}}"  class="flex-row flex-center">
+                <view class="h5" style="color:#888888;">未使用</view>
+                <!-- <image src="{{uploadpath}}resource/{{res.righticon}}" class="righticon"></image> -->
+            </view>
+            <view wx:else class="h5" style="color:#44B549;">-￥{{info.couponprice}}</view>
         </view>
     </view>
     <view class="height-70"></view>
@@ -142,9 +146,9 @@
 </view>
 <view class="flex-row flex-center fixbottom" wx:if="{{info.orderstatus=='F' && info.ispingjia==''}}">
     <view class="flex-1"></view>
-    <view class="cancelbtn margin-right-20"  bindtap="navigateto" id="/pages/addpingjia/addpingjia?id={{info.id}}">去评价</view>
+    <view class="cancelbtn margin-right-20" bindtap="navigateto" id="/pages/addpingjia/addpingjia?id={{info.id}}">去评价</view>
 </view>
 <view class="flex-row flex-center fixbottom" wx:if="{{info.orderstatus=='Q'}}">
     <view class="flex-1"></view>
-    <view class="cancelbtn margin-right-20"  bindtap="shanchuorder" >删除订单</view>
+    <view class="cancelbtn margin-right-20" bindtap="shanchuorder">删除订单</view>
 </view>
