--- a/source/pages/ordersubmit/ordersubmit.wxml
+++ b/source/pages/ordersubmit/ordersubmit.wxml
@@ -12,7 +12,6 @@
             <image src="{{uploadpath}}resource/{{res.righticon}}" class="righticon"></image>
         </view>
         <view wx:else class="flex-row flex-center dizhibox" bindtap="navigateto" id='/pages/addresslist/addresslist?chosetype=A&id={{address_id}}'>
-
             <view class="flex-1 flex-row">
                 <image src="{{uploadpath}}resource/{{res.dizhi}}" class="dizhi"></image>
                 <view>
@@ -59,7 +58,7 @@
         <view wx:else class="flex-row flex-center dizhibox" bindtap="navigateto" id='/pages/addresslist/addresslist?chosetype=B&id={{tihuoren_id}}'>
                 <view class="h5 txt-33">提货人</view>
                 <view class="flex-1"></view>
-            <view class="h5" style="color: #888;">{{addressthr.mobile}}{{addressthr.mobile}}</view>
+            <view class="h5" style="color: #888;">{{addressthr.name}}{{addressthr.mobile}}</view>
             <image src="{{uploadpath}}resource/{{res.righticon}}" class="righticon"></image>
         </view>
     </view>
